KNN and DT baselines implemented

--- a/Code/data-extraction/BRFSS-2024-Extraction.ipynb
+++ b/Code/data-extraction/BRFSS-2024-Extraction.ipynb
@@ -64,9 +64,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_fwf(\"../Data/LLCP2024.ASC\", colspecs=colspecs, names=colnames, dtype=str)\n",
+    "df = pd.read_fwf(\"../../Data/LLCP2024.ASC\", colspecs=colspecs, names=colnames, dtype=str)\n",
     "\n",
-    "df.to_csv(\"../Data/BRFSS_2024.csv\", index=False)"
+    "df.to_csv(\"../../Data/BRFSS_2024.csv\", index=False)"
    ]
   },
   {
@@ -276,7 +276,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../Data/BRFSS_2024.csv\", dtype=str)\n",
+    "df = pd.read_csv(\"../../Data/BRFSS_2024.csv\", dtype=str)\n",
     "df.head()"
    ]
   }
