--- a/Code/data-cleaning/Data_Cleaning_Feature_Extraction.ipynb
+++ b/Code/data-cleaning/Data_Cleaning_Feature_Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "66b9269e",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "CSV_PATH = \"../Data/BRFSS_2024.csv\"\n",
+    "CSV_PATH = \"../../Data/BRFSS_2024.csv\"\n",
     "TARGET = \"DIABETE4\"\n",
     "VALID_TARGET_CLASSES = {1, 3, 4}\n",
     "\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "7465eaf3",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
