updated logistic regression

--- a/Code/models/NBC.ipynb
+++ b/Code/models/NBC.ipynb
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1853ff45",
    "metadata": {},
    "outputs": [],
    "source": [
     "X = data.drop('DIABETE4', axis=1)\n",
-    "y = data['DIABETE4'].astype(int)\n"
+    "y = data['DIABETE4'].astype(int)"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5dcc5b83",
    "metadata": {},
    "outputs": [
@@ -621,7 +621,7 @@
    ],
    "source": [
     "nb = GaussianNB()\n",
-    "nb.fit(X_train, y_train)\n"
+    "nb.fit(X_train, y_train)"
    ]
   },
   {
