code cleanup and modelling plan updated in readme

--- a/Code/models/DT.ipynb
+++ b/Code/models/DT.ipynb
@@ -10,19 +10,15 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.preprocessing import LabelEncoder, label_binarize\n",
     "from sklearn.metrics import (\n",
     "    accuracy_score, precision_score, recall_score, f1_score,\n",
-    "    roc_auc_score, classification_report, confusion_matrix, roc_curve, auc\n",
-    ")\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from sklearn import tree"
+    "    classification_report, confusion_matrix, log_loss\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "88cf7309",
    "metadata": {},
    "outputs": [],
@@ -37,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "6d48d8b3",
    "metadata": {},
    "outputs": [],
@@ -50,12 +46,12 @@
     "clf.fit(X_train, y_train)\n",
     "\n",
     "y_pred = clf.predict(X_test)\n",
-    "y_proba = clf.predict_proba(X_test)[:, 1] if len(clf.classes_) == 2 else None"
+    "y_proba = clf.predict_proba(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "b97c193c",
    "metadata": {},
    "outputs": [
@@ -67,6 +63,7 @@
       "Precision (macro): 0.4029\n",
       "Recall (macro):    0.4077\n",
       "F1 Score (macro):  0.4050\n",
+      "Log Loss:          8.9086\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
@@ -92,32 +89,18 @@
     "precision = precision_score(y_test, y_pred, average='macro')\n",
     "recall = recall_score(y_test, y_pred, average='macro')\n",
     "f1 = f1_score(y_test, y_pred, average='macro')\n",
+    "logloss = log_loss(y_test, y_proba)\n",
     "\n",
     "\n",
     "print(f\"Accuracy:  {accuracy:.4f}\")\n",
     "print(f\"Precision (macro): {precision:.4f}\")\n",
     "print(f\"Recall (macro):    {recall:.4f}\")\n",
     "print(f\"F1 Score (macro):  {f1:.4f}\")\n",
+    "print(f\"Log Loss:          {logloss:.4f}\")\n",
     "\n",
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))\n",
     "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7da6a927",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d923520",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
