--- a/Code/models/NBC.ipynb
+++ b/Code/models/NBC.ipynb
@@ -12,7 +12,7 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.metrics import (\n",
     "    accuracy_score, precision_score, recall_score, f1_score,\n",
-    "    classification_report, confusion_matrix\n",
+    "    classification_report, confusion_matrix, log_loss\n",
     ")\n",
     "import numpy as np"
    ]
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1853ff45",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5dcc5b83",
    "metadata": {},
    "outputs": [
@@ -632,7 +632,7 @@
    "outputs": [],
    "source": [
     "y_pred = nb.predict(X_test)\n",
-    "y_proba = nb.predict_proba(X_test)[:, 1] if len(nb.classes_) == 2 else None"
+    "y_proba = nb.predict_proba(X_test)"
    ]
   },
   {
@@ -645,7 +645,8 @@
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "precision = precision_score(y_test, y_pred, average='macro', zero_division=0)\n",
     "recall = recall_score(y_test, y_pred, average='macro', zero_division=0)\n",
-    "f1 = f1_score(y_test, y_pred, average='macro', zero_division=0)"
+    "f1 = f1_score(y_test, y_pred, average='macro', zero_division=0)\n",
+    "logloss = log_loss(y_test, y_proba)"
    ]
   },
   {
@@ -662,6 +663,7 @@
       "Precision (macro):  0.4199\n",
       "Recall (macro):     0.4714\n",
       "F1 Score (macro):   0.4234\n",
+      "Log Loss:          6.0492\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
@@ -687,6 +689,7 @@
     "print(f\"Precision (macro):  {precision:.4f}\")\n",
     "print(f\"Recall (macro):     {recall:.4f}\")\n",
     "print(f\"F1 Score (macro):   {f1:.4f}\")\n",
+    "print(f\"Log Loss:          {logloss:.4f}\")\n",
     "\n",
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred, zero_division=0))\n",
     "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))"
@@ -695,7 +698,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -709,7 +712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
