--- a/Code/data-visulalization/Primary_data_visualization.ipynb
+++ b/Code/data-visulalization/Primary_data_visualization.ipynb
@@ -25,7 +25,6 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import missingno as msno\n",
-    "import seaborn as sns\n",
     "import numpy as np"
    ]
   },
@@ -119,6 +118,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "67f29357-8b73-4a58-86c0-783e4a488fd6",
+   "metadata": {},
+   "source": [
+    "*Figure 1. Distribution of Diabetes Responses among U.S. Adults in BRFSS, 2024.\n",
+    "This bar chart shows the percentage of participants classified by their diabetes status according to the BRFSS, 2024 data. A majority of participants (83.0%) reported they did not have diabetes diagnosed, 14.5% reported having a diagnosis of diabetes, and 2.5% were classified as pre-diabetic or borderline. Data was obtained from self-reported response to the diabetes screening question, for which codes are: 1 = \"Yes – diagnosed with diabetes,\" 3 = \"No – not diagnosed with diabetes,\" and 4 = \"No – pre-diabetes or borderline.\"*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60c094fc-b9d4-4593-b573-604d684cb08c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "78fb6251-99ea-4de4-b553-ef1b54548a89",
    "metadata": {},
    "source": [
@@ -187,6 +203,23 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4048130-cad5-4201-882e-6d8725805671",
+   "metadata": {},
+   "source": [
+    "*Figure 2. Comparison of Missing Value Correlation Patterns Before and After Data Cleaning (BRFSS 2024).\n",
+    "These heatmaps plot pairwise missingness correlation of missing values between selected BRFSS 2024 variables before (left) and after (right) data cleaning. A cell indicates the correlation of missingness for two variables, with +1 indicating that both variables are missing together, 0 indicating independent missingness, and −1 indicating opposite missing patterns. Red intensity (pre cleaning) highlights strong clusters of missing correlation—which suggest systematic gaps in data—while green intensity (post cleaning) highlights the significant reduction in inter-variable relationships after imputation and record drop-out. This picture depicts improved completeness in the data and reduced bias caused by missing values.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d210d576-78b1-4dab-844f-602413a79fae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -345,6 +378,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "241aecca-0197-4cf0-9d2a-c80ecb1fe49e",
+   "metadata": {},
+   "source": [
+    "*Figure 3. Invalid and Missing Data Structure Before and After Cleaning (BRFSS 2024).\n",
+    "This chart shows the response validity and missingness categories breakdown in the BRFSS 2024 dataset before (left) and after (right) data cleaning. Before the cleaning, nearly half of the total responses (48.4%) were blank or unrecorded (NaN), while 47.8% were valid entries. After data cleaning, valid responses had increased immensely to 89.3%, which was a sign of improved data completeness and reliability. Minor residual proportions are those \"Refused to answer,\" \"Not applicable,\" or \"Don't know/Not sure.\" These reflect the effectiveness of the cleaning process in eradicating invalid and missing values in variables.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6349a63-8c10-4f8b-819a-6bfd4df2766c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "5ea5c485-8cb1-46be-94dc-fec8a68b650b",
    "metadata": {},
    "source": [
@@ -402,6 +452,23 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a39bc4d-4c35-47d5-9676-ef33736899ef",
+   "metadata": {},
+   "source": [
+    "*Figure 4. Reduction in Number of Features Prior and Post Data Cleaning (BRFSS 2024).\n",
+    "This bar chart demonstrates the number of variables retained from the BRFSS 2024 data before and after preprocessing. The raw data contained 301 variables at the beginning, which were reduced to 79 once data cleaning and feature filtering took place. Trimming depicts removal of duplicated, low-quality, or very missing variables to improve data quality and analysis efficiency. Red marks the original raw data, and green marks the cleaned data.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b580b50-30ac-4ac3-8909-260125af8e5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -520,6 +587,23 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47f7e35b-ba21-4d30-b00a-1792acbac18e",
+   "metadata": {},
+   "source": [
+    "*Figure 5. Distribution of Demographic and Lifestyle Factors by Diabetes Status (BRFSS 2024).\n",
+    "This multi-panel bar chart compares the pattern of diabetes prevalence varying by meaningful demographic and lifestyle-related variables in the BRFSS 2024 data, including race (_RACEPRV), age group (_AGE_G), employment status (EMPLOY1), educational level (EDUCA), income level (INCOME3), and health access (_HLTHPL2). Each panel displays the number of each category of variables by diabetes status—borderline/pre-diabetic (blue), diabetic (red), or unknown (yellow). The distributions reflect demographic variations in the prevalence of diabetes, with older age groups and lower levels of education or income having proportionally higher levels of diabetes.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93819196-cb3d-4827-a202-7d19d0bff012",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -647,6 +731,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b118ed7a-ae93-44f6-a53d-414466abf99f",
+   "metadata": {},
+   "source": [
+    "*Figure 6. Distribution of Health and Behavioral Variable by Diabetes Status (BRFSS 2024).\n",
+    "This multi-panel bar chart shows diabetes prevalence by significant health and behavioral variables in the BRFSS 2024 dataset. Indicators vary from BMI category (_BMI5CAT), smoking (_SMOKE100), alcohol consumption (DRNKANY6), stroke history (CVDSTRK3), asthma diagnosis (_ASTHMS1), heart disease (CVDINFR4), physical activity (EXERANY2), mental health (_MENT14D), and overall inactivity (_TOTINDA). Each axis shows the number of respondents in each category of variables, by diabetes status—borderline/pre-diabetic (blue), diabetic (red), or unknown (yellow). Trends suggest that those with diabetes are also more likely to have increased BMI, reduced physical activity, and increased rates of cardiovascular or respiratory conditions.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27f27a21-a9c1-481b-8b7a-526dd7e12957",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "a5e69f1b-57c7-42c8-b909-18eae37bd3ac",
    "metadata": {},
    "source": [
@@ -762,6 +863,25 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e44aea45-1256-4e2f-b19f-1916b5d50e98",
+   "metadata": {},
+   "source": [
+    "*Figure 7. Borderline/Pre-diabetic and Diabetic Respondents Health and Behavior Comparison Profiles (BRFSS 2024).\n",
+    "This radar graph shows relative ratios of significant lifestyle and health factors in Borderline/Pre-diabetic (yellow) and Diabetic (red) groups based on 2024 BRFSS. Smoking, alcohol use, physical activity, exercise, asthma, BMI category, mental health, and heart disease are compared. Diabetic patients have higher heart disease rates, poorer mental health, higher BMI, and lower physical activity and exercise compared to borderline/pre-diabetic patients.*\n",
+    "\n",
+    "Note: Use this radar plot only for exploratory visualization of multivariate health behavior patterns, and not for quantitative inference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "827c6154-e99a-4baf-a3fd-7f69ad1c5711",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
