iteration 1 of dt hyper-param tuning

--- a/Code/models/DT.ipynb
+++ b/Code/models/DT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "6ae464ef",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "88cf7309",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "6d48d8b3",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "b97c193c",
    "metadata": {},
    "outputs": [
@@ -63,17 +63,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.7528\n",
-      "Precision (macro): 0.4029\n",
-      "Recall (macro):    0.4077\n",
-      "F1 Score (macro):  0.4050\n",
+      "Accuracy:  0.7530\n",
+      "Precision (macro): 0.4036\n",
+      "Recall (macro):    0.4081\n",
+      "F1 Score (macro):  0.4056\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "           1       0.30      0.32      0.31     13162\n",
-      "           3       0.87      0.85      0.86     75226\n",
-      "           4       0.05      0.05      0.05      2261\n",
+      "           3       0.86      0.85      0.86     75226\n",
+      "           4       0.05      0.06      0.05      2261\n",
       "\n",
       "    accuracy                           0.75     90649\n",
       "   macro avg       0.40      0.41      0.41     90649\n",
@@ -81,9 +81,9 @@
       "\n",
       "\n",
       "Confusion Matrix:\n",
-      " [[ 4224  8361   577]\n",
-      " [ 9398 63901  1927]\n",
-      " [  546  1596   119]]\n"
+      " [[ 4201  8405   556]\n",
+      " [ 9340 63937  1949]\n",
+      " [  521  1615   125]]\n"
      ]
     }
    ],
@@ -105,19 +105,396 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "7da6a927",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "import pandas as pd\n",
+    "\n",
+    "criteria = ['gini', 'entropy', 'log_loss']\n",
+    "depth_values = [4, 6, 8, 10, None]      \n",
+    "min_samples_values = [2, 5, 10, 20]\n",
+    "\n",
+    "records = []\n",
+    "\n",
+    "for crit in criteria:\n",
+    "    for max_depth in depth_values:\n",
+    "        for min_split in min_samples_values:\n",
+    "            clf_temp = DecisionTreeClassifier(\n",
+    "                criterion=crit,\n",
+    "                max_depth=max_depth,\n",
+    "                min_samples_split=min_split,\n",
+    "                random_state=42\n",
+    "            )\n",
+    "\n",
+    "            clf_temp.fit(X_train, y_train)\n",
+    "            y_pred_temp = clf_temp.predict(X_test)\n",
+    "\n",
+    "            acc = accuracy_score(y_test, y_pred_temp)\n",
+    "            f1_macro = f1_score(y_test, y_pred_temp, average='macro')\n",
+    "\n",
+    "            records.append({\n",
+    "                \"Criterion\": crit,\n",
+    "                \"Max Depth\": max_depth,\n",
+    "                \"Min Samples Split\": min_split,\n",
+    "                \"Accuracy\": acc,\n",
+    "                \"F1_macro\": f1_macro\n",
+    "            })\n",
+    "\n",
+    "results_df = pd.DataFrame(records)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "1d923520",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Criterion</th>\n",
+       "      <th>Max Depth</th>\n",
+       "      <th>Min Samples Split</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>F1_macro</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gini</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.777780</td>\n",
+       "      <td>0.405825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>entropy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.778894</td>\n",
+       "      <td>0.405807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>log_loss</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.778894</td>\n",
+       "      <td>0.405807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>gini</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.753047</td>\n",
+       "      <td>0.405634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>entropy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.760714</td>\n",
+       "      <td>0.404953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>log_loss</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.760714</td>\n",
+       "      <td>0.404953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>gini</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.761729</td>\n",
+       "      <td>0.404738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>entropy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.753158</td>\n",
+       "      <td>0.403045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>log_loss</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.753158</td>\n",
+       "      <td>0.403045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>entropy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.753952</td>\n",
+       "      <td>0.402232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>log_loss</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.753952</td>\n",
+       "      <td>0.402232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>gini</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.753820</td>\n",
+       "      <td>0.401745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>gini</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.832122</td>\n",
+       "      <td>0.383657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>gini</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.831956</td>\n",
+       "      <td>0.383500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>gini</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.832033</td>\n",
+       "      <td>0.383487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>gini</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.832022</td>\n",
+       "      <td>0.383432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>entropy</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.832265</td>\n",
+       "      <td>0.383205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>log_loss</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.832265</td>\n",
+       "      <td>0.383205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>entropy</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.832254</td>\n",
+       "      <td>0.383158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>log_loss</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.832254</td>\n",
+       "      <td>0.383158</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Criterion  Max Depth  Min Samples Split  Accuracy  F1_macro\n",
+       "0       gini        NaN                 20  0.777780  0.405825\n",
+       "1    entropy        NaN                 20  0.778894  0.405807\n",
+       "2   log_loss        NaN                 20  0.778894  0.405807\n",
+       "3       gini        NaN                  2  0.753047  0.405634\n",
+       "4    entropy        NaN                 10  0.760714  0.404953\n",
+       "5   log_loss        NaN                 10  0.760714  0.404953\n",
+       "6       gini        NaN                 10  0.761729  0.404738\n",
+       "7    entropy        NaN                  5  0.753158  0.403045\n",
+       "8   log_loss        NaN                  5  0.753158  0.403045\n",
+       "9    entropy        NaN                  2  0.753952  0.402232\n",
+       "10  log_loss        NaN                  2  0.753952  0.402232\n",
+       "11      gini        NaN                  5  0.753820  0.401745\n",
+       "12      gini       10.0                 20  0.832122  0.383657\n",
+       "13      gini       10.0                  2  0.831956  0.383500\n",
+       "14      gini       10.0                  5  0.832033  0.383487\n",
+       "15      gini       10.0                 10  0.832022  0.383432\n",
+       "16   entropy       10.0                  5  0.832265  0.383205\n",
+       "17  log_loss       10.0                  5  0.832265  0.383205\n",
+       "18   entropy       10.0                 10  0.832254  0.383158\n",
+       "19  log_loss       10.0                 10  0.832254  0.383158"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_sorted = (\n",
+    "    results_df\n",
+    "    .sort_values(by=[\"F1_macro\", \"Accuracy\"], ascending=False)\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
+    "\n",
+    "results_sorted.head(20)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0d76d5e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best hyperparameters from grid:\n",
+      "Criterion                gini\n",
+      "Max Depth                 NaN\n",
+      "Min Samples Split          20\n",
+      "Accuracy              0.77778\n",
+      "F1_macro             0.405825\n",
+      "Name: 0, dtype: object\n",
+      "\n",
+      "Tuned Decision Tree Performance:\n",
+      "Accuracy:          0.7778\n",
+      "Precision (macro): 0.4082\n",
+      "Recall (macro):    0.4072\n",
+      "F1 Score (macro):  0.4058\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.32      0.33      0.33     13162\n",
+      "           3       0.86      0.88      0.87     75226\n",
+      "           4       0.04      0.01      0.02      2261\n",
+      "\n",
+      "    accuracy                           0.78     90649\n",
+      "   macro avg       0.41      0.41      0.41     90649\n",
+      "weighted avg       0.77      0.78      0.77     90649\n",
+      "\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[ 4346  8644   172]\n",
+      " [ 8510 66131   585]\n",
+      " [  554  1679    28]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "best_row = results_sorted.iloc[0]\n",
+    "print(\"Best hyperparameters from grid:\")\n",
+    "print(best_row)\n",
+    "\n",
+    "raw_max_depth = best_row[\"Max Depth\"]\n",
+    "if pd.isna(raw_max_depth):\n",
+    "    max_depth_param = None\n",
+    "else:\n",
+    "    max_depth_param = int(raw_max_depth)\n",
+    "\n",
+    "best_clf = DecisionTreeClassifier(\n",
+    "    criterion=best_row[\"Criterion\"],\n",
+    "    max_depth=max_depth_param,\n",
+    "    min_samples_split=int(best_row[\"Min Samples Split\"]),\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "best_clf.fit(X_train, y_train)\n",
+    "y_pred_best = best_clf.predict(X_test)\n",
+    "\n",
+    "best_accuracy = accuracy_score(y_test, y_pred_best)\n",
+    "best_precision = precision_score(y_test, y_pred_best, average='macro')\n",
+    "best_recall = recall_score(y_test, y_pred_best, average='macro')\n",
+    "best_f1 = f1_score(y_test, y_pred_best, average='macro')\n",
+    "\n",
+    "print(\"\\nTuned Decision Tree Performance:\")\n",
+    "print(f\"Accuracy:          {best_accuracy:.4f}\")\n",
+    "print(f\"Precision (macro): {best_precision:.4f}\")\n",
+    "print(f\"Recall (macro):    {best_recall:.4f}\")\n",
+    "print(f\"F1 Score (macro):  {best_f1:.4f}\")\n",
+    "\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred_best))\n",
+    "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred_best))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "3bbff8c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline tree (your original clf):\n",
+      "  Accuracy: 0.7530\n",
+      "  F1_macro: 0.4056\n",
+      "\n",
+      "Best tuned tree (from grid):\n",
+      "  Accuracy: 0.7778\n",
+      "  F1_macro: 0.4058\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Baseline tree (your original clf):\")\n",
+    "print(f\"  Accuracy: {accuracy:.4f}\")\n",
+    "print(f\"  F1_macro: {f1:.4f}\")\n",
+    "\n",
+    "print(\"\\nBest tuned tree (from grid):\")\n",
+    "print(f\"  Accuracy: {best_accuracy:.4f}\")\n",
+    "print(f\"  F1_macro: {best_f1:.4f}\")\n"
+   ]
   }
  ],
  "metadata": {
