--- a/Code/data-visulalization/Primary_data_visualization.ipynb
+++ b/Code/data-visulalization/Primary_data_visualization.ipynb
@@ -30,15 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "efb0f07f-fc21-4cdd-92cc-11504d6f5ed0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# DATASET LOADING\n",
     "\n",
-    "df = pd.read_csv(\"BRFSS_2024_visualization.csv\")\n",
-    "df_raw = pd.read_csv(\"BRFSS_2024.csv\", low_memory=False)"
+    "df = pd.read_csv(\"../../Data/BRFSS_2024_visualization.csv\")\n",
+    "df_raw = pd.read_csv(\"../../Data/BRFSS_2024.csv\", low_memory=False)"
    ]
   },
   {
