--- a/Code/models/NBC.ipynb
+++ b/Code/models/NBC.ipynb
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "94fe9d83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"../../Results/BRFSS_2024_model_ready.csv\", low_memory=False)"
+    "data = pd.read_csv(\"../../Data/BRFSS_2024_model_ready.csv\", low_memory=False)"
    ]
   },
   {
@@ -237,7 +237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
